--- a/README
+++ b/README
@@ -1,9 +1,58 @@
 phpfs - Remote FUSE filesystem via PHP
+Andrea Cardaci <cyrus.and@gmail.com>
+Emilio Pinna <emilio.pinn@gmail.com>
 --------------------------------------------------------------------------------
+
+Info:
+
+    phpfs is a FUSE-based filesystem that uses HTTP messages to mount a remote
+    location on a local machine, relying on a generated PHP script installed on
+    the remote machine.
 
 Dependencies:
 
     fuse
     libfuse-dev
     libcurl4-openssl-dev
+    cmake
 
+Install:
+
+    $ make
+    # make install
+
+Uninstall:
+
+    # make uninstall
+
+Sample usage:
+
+    0. Make sure the current user is in the fuse group (this preliminary step is
+       mandatory to use any FUSE filesystem):
+
+           # adduser john fuse
+
+       Then log out and back in or start a new shell with:
+
+           $ newgrp fuse
+
+       to inform the system about the changes.
+
+    1. Generate the PHP script:
+
+           $ phpfs generate > phpfs.php
+
+    2. Place the generated script in an accessible location inside the document
+       root of your web server.
+
+    3. Mount the remote filesystem:
+
+           $ mkdir /tmp/phpfs/
+           $ phpfs mount http://target.com/phpfs.php /tmp/phpfs/ /home/john/
+
+    4. Now the remote /home/john/ is mounted in /tmp/phpfs/, head there to
+       browse the remote files.
+
+    5. Unmount the filesystem:
+
+           $ fusermount -u /tmp/phpfs/
